# pyogrio

./: pyproject.toml
pyogrio/: _ogr.pxd  _ogr.pyx
