[build-system]
# numpy and Cython are required to execute setup.py to build Cython extensions
requires = [
    "setuptools",
    "wheel",
    "Cython>=0.29",
    "numpy==1.13.3; python_version=='3.6'",
    "numpy==1.14.5; python_version=='3.7'",
    "numpy==1.17.3; python_version=='3.8'",
    "numpy==1.19.5; python_version=='3.9'",
    # do not pin numpy on future versions of python to avoid incompatible numpy and python versions
    "numpy; python_version>='3.10'",
]

[tool.cibuildwheel]

manylinux-x86_64-image = "manylinux_2_24"

before-all = [
    "apt-get update",
    "apt-get install -y curl zip unzip tar",
    "git clone https://github.com/Microsoft/vcpkg.git",
    "./vcpkg/bootstrap-vcpkg.sh",
    "./vcpkg/vcpkg install gdal",
    'export PATH="$PATH:./vcpkg/installed/x64-linux/bin"',
]